--- a/app/src/main/res/layout/fridge_widget_item.xml
+++ b/app/src/main/res/layout/fridge_widget_item.xml
@@ -13,7 +13,8 @@
         android:text="Name"
         android:textStyle="bold"
         android:textColor="#ffffff"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/wd_measure"
@@ -22,5 +23,6 @@
         android:text="sp"
         android:textColor="#ffffff"
         android:textSize="18sp"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentEnd="true"/>
+
 </RelativeLayout>
