--- a/app/src/main/res/layout/inventory_item2.xml
+++ b/app/src/main/res/layout/inventory_item2.xml
@@ -20,7 +20,7 @@
             android:visibility="gone" />
 
         <LinearLayout
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
